<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="meal_cost">Meal Cost $</string>
    <string name="tax_percentage">Tax Percentage %</string>
    <string name="tip_percentage">Tip Percentage %</string>
    <string name="meal_total_cost">Total Meal Cost $</string>
    <string name="calculate_button">Calculate</string>
    <string name="percentage_hint">20</string>
</resources>
